[gd_scene load_steps=3 format=3 uid="uid://dnpl73b4slw3p"]

[ext_resource type="Script" path="res://LP4-2.gd" id="1_c37h2"]

[sub_resource type="LabelSettings" id="LabelSettings_dqehg"]
font_size = 25

[node name="LP4-2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c37h2")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 604.0
offset_top = 47.0
offset_right = 1092.0
offset_bottom = 354.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 32.0
offset_right = 336.0
offset_bottom = 101.0
text = "Weight of package (kg):"
label_settings = SubResource("LabelSettings_dqehg")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 116.0
offset_right = 330.0
offset_bottom = 185.0
text = "Length of package (cm):"
label_settings = SubResource("LabelSettings_dqehg")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 201.0
offset_right = 317.0
offset_bottom = 270.0
text = "Width of package (cm):"
label_settings = SubResource("LabelSettings_dqehg")

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 286.0
offset_right = 318.0
offset_bottom = 355.0
text = "Height of package (cm):"
label_settings = SubResource("LabelSettings_dqehg")

[node name="Calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 203.0
offset_top = 557.0
offset_right = 436.0
offset_bottom = 618.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 556.0
offset_right = 688.0
offset_bottom = 617.0
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 702.0
offset_top = 555.0
offset_right = 935.0
offset_bottom = 616.0
text = "Exit"

[node name="txtWeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 347.0
offset_top = 28.0
offset_right = 525.0
offset_bottom = 90.0

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 353.0
offset_top = 207.0
offset_right = 520.0
offset_bottom = 267.0

[node name="txtHeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 298.0
offset_right = 520.0
offset_bottom = 356.0

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 114.0
offset_right = 519.0
offset_bottom = 183.0

[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
